--- a/package.json
+++ b/package.json
@@ -23,8 +23,9 @@
         "build-dev": "npm-run-all build-dev:sass build:autoprefixer",
         "build-dev:sass": "node-sass --output-style expanded --source-map true -o src/css src/sass",
         "watch": "npm-run-all build build-dev -p watch:*",
-        "watch:browsersync": "browser-sync start --server docs --files \"docs/**/*\"",
+        "watch:browsersync": "browser-sync start --server src --files \"src/**/*\"",
         "watch:sassprefixer": "onchange \"src/sass/**/*.scss\" -- npm run build-dev",
+
         "lint": "eslint --fix --ext .js,.jsx ."
     },
     "keywords": [],
